--- a/netbox/static/netbox/css/variables.scss
+++ b/netbox/static/netbox/css/variables.scss
@@ -25,6 +25,7 @@ $border-radius-big: #{2*$radius}px;
 // Breakpoints
 $media-large: 1170px;
 $media-medium: 768px;
+$media-small: 480px;
 
 // Spacers
 $spacer-base: 5px;
